k8s/domains/capabilities/infra/api/base/capabilities-api-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: capabilities-api-depl
spec:
  selector:
    matchLabels:
      app: capabilities-api
  replicas: 3
  template:
    metadata:
      labels:
        app: capabilities-api
    spec:
      terminationGracePeriodSeconds: 15
      automountServiceAccountToken: false

      containers:
        - name: capabilities-api
          image: mdstaicu/capabilities-api
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2

          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 2
