k8s/domains/capabilities/infra/api/base/capabilities-api-srv.yaml
apiVersion: v1
kind: Service

metadata:
  name: capabilities-api-srv
spec:
  selector:
    app: capabilities-api
  ports:
    - name: capabilities-api
      port: 3000
      targetPort: 3000
