k8s/domains/capabilities/infra/api/base/capabilities-api-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: capabilities-api-internal
spec:
  entryPoints:
    - http

  routes:
    - kind: Rule
      match: PathPrefix(`/v1/capabilities`)
      services:
        - name: capabilities-api-srv
          port: 3000
